[gd_scene load_steps=3 format=3 uid="uid://dvevdmjfdmirb"]

[ext_resource type="Script" uid="uid://drfaj2t04kqe2" path="res://scripts/pause_menu.gd" id="1_n87rw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uahpa"]
bg_color = Color(0.940834, 0.42836, 1.92523e-07, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0.337255, 0, 0.6)
shadow_size = 2
shadow_offset = Vector2(0, 1)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 0.0156863)

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -462.0
offset_top = -106.0
offset_right = -92.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
theme_override_constants/separation = 30

[node name="ResumeButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_uahpa")
text = "Resume"

[node name="MainMenuButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_uahpa")
text = "Main Menu
"

[connection signal="pressed" from="ButtonContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ButtonContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
